--- a/my-app/package.json
+++ b/my-app/package.json
@@ -18,8 +18,10 @@
     "@expo-google-fonts/nunito": "^0.2.3",
     "@expo-google-fonts/raleway": "^0.2.3",
     "@expo/vector-icons": "^14.0.2",
+    "@react-native-async-storage/async-storage": "^2.1.2",
     "@react-navigation/bottom-tabs": "^7.2.0",
     "@react-navigation/native": "^7.0.14",
+    "axios": "^1.8.1",
     "expo": "~52.0.37",
     "expo-blur": "~14.0.3",
     "expo-constants": "~17.0.7",
@@ -43,6 +45,7 @@
     "react-native-responsive-screen": "^1.4.2",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.4.0",
+    "react-native-toast-notifications": "^3.4.0",
     "react-native-web": "~0.19.13",
     "react-native-webview": "13.12.5"
   },
